# TFG-ASD-Devices

./: .gitignore  asd_profile.json  asd_rule_chain.json  config.h  desviación rtc.xlsx  http_to_server.json  readme.md
binary_source_code/: CMakeLists.txt  sdkconfig  sdkconfig.old
binary_source_code/main/: CMakeLists.txt  config.h  ota_version_fetcher.c
blueprints/interconectinos/: photo_2_2024-03-21_22-25-53.jpg~
blueprints/irl/: photo_1_2024-03-21_22-09-27.jpg~  photo_2_2024-03-21_22-09-27.jpg~  photo_4_2024-03-21_22-09-27.jpg~  photo_5_2024-03-21_22-09-27.jpg~  photo_6_2024-03-21_22-09-27.jpg~  photo_7_2024-03-21_22-09-27.jpg~
demos/OTA/app/main/: CMakeLists.txt  ota_plugin.h
demos/OTA/simple_ota_example/main/: CMakeLists.txt  main.c  ota_version_fetcher.h
demos/OTA_old/: readme.md
demos/ble_spp_server/: sdkconfig
demos/blink/: READMEASWELL.md  sdkconfig
demos/esp_cam/: READMEASWELL.md  component.mk  sdkconfig
demos/esp_cam_server/: sdkconfig  sdkconfig.old
demos/gatt_server/: sdkconfig
demos/qr/: READMEASWELL.md  sdkconfig  sdkconfig.old
dev_server/: package-lock.json
dev_server/HTTP/: http_server.js
devicehive/devicehive-docker-3.5.0/: eltutorialquetendrianquetenerenlawe.md
devicehive/devicehive_plugin/: main.js  package-lock.json  package.json
ota_server/: master_start.bat  package-lock.json  package.json
provisioning_app/: deploy.js  kk  kk2  package-lock.json  package.json  webpack.config.js
rtc_test/: readme.md
server/: .gitignore  copy_bin_to_public.bat  master_start.bat  package.json  ping.json  ping_smqtt.bat
source/: CMakeLists.txt  LICENSE  README.md  architecture.uml  nvs.bat  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.ci.anti_rollback  sdkconfig.ci.bluedroid  sdkconfig.ci.nimble  sdkconfig.ci.partial_download  sdkconfig.old  static_analisis.txt
source/main/: CMakeLists.txt  Kconfig.projbuild  common.c  common.h  https_ota.c  https_ota.h  idf_component.yml  main.c  mqtt_plugin.c  mqtt_plugin.h  nvs_plugin.c  nvs_plugin.h  sync.c  sync.h
source/main/BT/: bt.c  bt.h  bt_logic.c
source/main/Buttons/: buttons.c  buttons.h
source/main/Camera/: camera.c  camera.h
source/main/MQTT/: mqtt.c  mqtt.h  mqtt_engine.c  tb_rpc_ingest.c  tb_shared_attribute_ingest.c
source/main/OTA/: ota.c  ota.h
source/main/QR/: qr.c  qr.h  qr_logic.c
source/main/SYS_MODE/: sys_mode.c  sys_mode.h
source/main/Screen/: screen.c  screen.h
source/main/Starter/: connect_wifi.c  connect_wifi.h  starter.c  starter.h
source/main/TOTP/: totp.c  totp.h
source/main/TOTP/lib/: cotp.c
source/main/TOTP/lib/totp.c/: totp.c
source/main/icon/: failure.c  good.c  icon.h  krita_project.kra  noBackend.c  noBackend.kra  noBackendAuth.c  noBackendAuth.kra  noBackendAuth.kra~  noQr.c  noQr.kra  noQr.kra~  noTB.c  noTB.kra  noTBAuth.c  noTBAuth.kra  noWifi.c  noWifi.kra  success.c  success.png~  warning.c
thingsboard/: create_node_red.bat  create_things_board.bat  send_ping.bat  start_node_red.bat  start_things_board.bat
(+831 files in other folders)
